Added overlay confirmation/payment pages

--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
          <div class="dropmenu">
             <svg class="menu icon" height="32px" id="Layer_1" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"/></svg>
             <ol class="dropdown">
-               <li><a href="menu.html">Menu</a></li>
-               <li><a href="booking.html">Book Table</a></li>
+               <a href="menu.html"><li>Menu</li></a>
+               <a href="booking.html"><li>Book Table</li></a>
+               <a href="basket.html"><li>Orders</li></a>
+               <a href="#"><li>Account</li></a>
             </ol>
          </div>
 
          <div></div>
          <a href="index.html"><img class="logo" src="images/icons/logo-col.svg" alt="Logo"/></a>
-         <a href="#"><svg class="basket icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+         <a href="basket.html"><svg class="basket icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                viewBox="0 0 243.3 211" style="enable-background:new 0 0 243.3 211;" xml:space="preserve"> <g id="Layer_2_1_"> <g id="Layer_1-2"> <path class="st0" d="M214.7,0.1L214.7,0.1L203.3,0v0.1h-11.1V0h-10.8v0.1h-10.8c0,0,0,0,0-0.1h-10.4v0.1h-23.7c0,0,0,0,0-0.1H126
                   v0.1h-10.8V0h-10.8v0.1H93.3V0H81.8v0.1H66.6c0,0,0,0,0-0.1H56.2v0.1H45.3V0H34.5v0.1H15.9L0,65.8L27.9,78l22.2,133h143.8 l22.3-133.4l27.2-11.9l-16-65.7H214.7z M181,191.6H63l-3.7-21.4h125.3L181,191.6z M193,117.8H51l-9.3-53.5
                   C59,86,88.5,100.2,122,100.2s63-14.2,80.3-35.8L193,117.8z M122,81.7c-44.1,0-80.4-27.2-85.1-62.3h170.2 C202.4,54.5,166.1,81.7,122,81.7L122,81.7z"/>
@@ -60,9 +62,9 @@
          <section class="gallery-section">
             <div class="gallery wrapper">
                <img class="chevron" src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/chevron-left-512.png" alt="chevron left"/>
-               <img class="pic" src="images/500_F_317434320_ulTT7DyRSnfTSXdFeY6jd3tvDfLCIW43.jpg" alt="User Photo"/>
-               <img class="pic picextra" src="images/500_F_317434320_ulTT7DyRSnfTSXdFeY6jd3tvDfLCIW43.jpg" alt="User Photo"/>
-               <img class="pic picextra" src="images/500_F_317434320_ulTT7DyRSnfTSXdFeY6jd3tvDfLCIW43.jpg" alt="User Photo"/>
+               <img class="pic" src="images/pic_254640691.jpeg" alt="User Photo"/>
+               <img class="pic picextra" src="images/pic_292833767.jpeg" alt="User Photo"/>
+               <img class="pic picextra" src="images/pic_292833717.jpeg" alt="User Photo"/>
                <img class="pic picextra" src="images/500_F_317434320_ulTT7DyRSnfTSXdFeY6jd3tvDfLCIW43.jpg" alt="User Photo"/>
                <img class="chevron" src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/chevron-right-512.png" alt="chevron right"/>
             </div>
